A2/y.output
State 270 충돌: 1 쉬프트/리듀스


문법

    0 $accept: program $end

    1 program: translate_unit

    2 translate_unit: external_declaration
    3               | translate_unit external_declaration

    4 external_declaration: function_definition
    5                     | declaration

    6 function_definition: declaration_specifiers declarator compound_statement
    7                    | declarator compound_statement

    8 declaration_list_opt: ε
    9                     | declaration_list

   10 declaration_list: declaration
   11                 | declaration_list declaration

   12 declaration: declaration_specifiers init_declarator_list_opt SEMICOLON

   13 declaration_specifiers: type_specifier
   14                       | storage_class_specifier
   15                       | type_specifier declaration_specifiers
   16                       | storage_class_specifier declaration_specifiers

   17 storage_class_specifier: AUTO_SYM
   18                        | STATIC_SYM
   19                        | TYPEDEF_SYM

   20 init_declarator_list_opt: ε
   21                         | init_declarator_list

   22 init_declarator_list: init_declarator
   23                     | init_declarator_list COMMA init_declarator

   24 init_declarator: declarator
   25                | declarator ASSIGN initializer

   26 initializer: constant_expression
   27            | LR initializer_list RR

   28 initializer_list: initializer
   29                 | initializer_list COMMA initializer

   30 type_specifier: struct_type_specifier
   31               | enum_type_specifier
   32               | TYPE_IDENTIFIER

   33 struct_type_specifier: struct_or_union IDENTIFIER LR struct_declaration_list RR
   34                      | struct_or_union LR struct_declaration_list RR
   35                      | struct_or_union IDENTIFIER

   36 struct_or_union: STRUCT_SYM
   37                | UNION_SYM

   38 struct_declaration_list: struct_declaration
   39                        | struct_declaration_list struct_declaration

   40 struct_declaration: type_specifier struct_declarator_list SEMICOLON

   41 struct_declarator_list: struct_declarator
   42                       | struct_declarator_list COMMA struct_declarator

   43 struct_declarator: declarator

   44 enum_type_specifier: ENUM_SYM IDENTIFIER LR enumerator_list RR
   45                    | ENUM_SYM LR enumerator_list RR
   46                    | ENUM_SYM IDENTIFIER

   47 enumerator_list: enumerator
   48                | enumerator_list COMMA enumerator

   49 enumerator: IDENTIFIER
   50           | IDENTIFIER ASSIGN expression

   51 declarator: pointer direct_declarator
   52           | direct_declarator

   53 pointer: STAR
   54        | STAR pointer

   55 direct_declarator: IDENTIFIER
   56                  | LP declarator RP
   57                  | direct_declarator LB constant_expression_opt RB
   58                  | direct_declarator LP parameter_type_list_opt RP

   59 parameter_type_list_opt: ε
   60                        | parameter_type_list

   61 parameter_type_list: parameter_list
   62                    | parameter_list COMMA DOTDOTDOT

   63 parameter_list: parameter_declaration
   64               | parameter_list COMMA parameter_declaration

   65 parameter_declaration: declaration_specifiers declarator
   66                      | declaration_specifiers abstract_declarator_opt

   67 abstract_declarator_opt: ε
   68                        | abstract_declarator

   69 abstract_declarator: direct_abstract_declarator
   70                    | pointer
   71                    | pointer direct_abstract_declarator

   72 direct_abstract_declarator: LP abstract_declarator RP
   73                           | LB constant_expression_opt RB
   74                           | direct_abstract_declarator LB constant_expression_opt RB
   75                           | LP parameter_type_list_opt RP
   76                           | direct_abstract_declarator LP parameter_type_list_opt RP

   77 statement_list_opt: ε
   78                   | statement_list

   79 statement_list: statement
   80               | statement_list statement

   81 statement: labeled_statement
   82          | compound_statement
   83          | expression_statement
   84          | selection_statement
   85          | iteration_statement
   86          | jump_statement

   87 labeled_statement: CASE_SYM constant_expression COLON statement
   88                  | DEFAULT_SYM COLON statement

   89 compound_statement: LR declaration_list_opt statement_list_opt RR

   90 expression_statement: SEMICOLON
   91                     | expression SEMICOLON

   92 selection_statement: IF_SYM LP expression RP statement
   93                    | IF_SYM LP expression RP statement ELSE_SYM statement
   94                    | SWITCH_SYM LP expression RP statement

   95 iteration_statement: WHILE_SYM LP expression RP statement
   96                    | DO_SYM statement WHILE_SYM LP expression RP SEMICOLON
   97                    | FOR_SYM LP for_expression RP statement

   98 for_expression: expression_opt SEMICOLON expression_opt SEMICOLON expression_opt

   99 expression_opt: ε
  100               | expression

  101 jump_statement: RETURN_SYM expression_opt SEMICOLON
  102               | CONTINUE_SYM SEMICOLON
  103               | BREAK_SYM SEMICOLON

  104 arg_expression_list_opt: ε
  105                        | arg_expression_list

  106 arg_expression_list: assignment_expression
  107                    | arg_expression_list COMMA assignment_expression

  108 constant_expression_opt: ε
  109                        | constant_expression

  110 constant_expression: expression

  111 expression: comma_expression

  112 comma_expression: assignment_expression

  113 assignment_expression: conditional_expression
  114                      | unary_expression ASSIGN assignment_expression

  115 conditional_expression: logical_or_expression

  116 logical_or_expression: logical_and_expression
  117                      | logical_or_expression BARBAR logical_and_expression

  118 logical_and_expression: bitwise_or_expression
  119                       | logical_and_expression AMPAMP bitwise_or_expression

  120 bitwise_or_expression: bitwise_xor_expression

  121 bitwise_xor_expression: bitwise_and_expression

  122 bitwise_and_expression: equality_expression

  123 equality_expression: relational_expression
  124                    | equality_expression EQL relational_expression
  125                    | equality_expression NEQ relational_expression

  126 relational_expression: shift_expression
  127                      | relational_expression LSS shift_expression
  128                      | relational_expression GTR shift_expression
  129                      | relational_expression LEQ shift_expression
  130                      | relational_expression GEQ shift_expression

  131 shift_expression: additive_expression

  132 additive_expression: multiplicative_expression
  133                    | additive_expression PLUS multiplicative_expression
  134                    | additive_expression MINUS multiplicative_expression

  135 multiplicative_expression: cast_expression
  136                          | multiplicative_expression STAR cast_expression
  137                          | multiplicative_expression SLASH cast_expression
  138                          | multiplicative_expression PERCENT cast_expression

  139 cast_expression: unary_expression
  140                | LP type_name RP cast_expression

  141 unary_expression: postfix_expression
  142                 | PLUSPLUS unary_expression
  143                 | MINUSMINUS unary_expression
  144                 | AMP cast_expression
  145                 | STAR cast_expression
  146                 | EXCL cast_expression
  147                 | MINUS cast_expression
  148                 | PLUS cast_expression
  149                 | SIZEOF_SYM unary_expression
  150                 | SIZEOF_SYM LP type_name RP

  151 postfix_expression: primary_expression
  152                   | postfix_expression LB expression RB
  153                   | postfix_expression LP arg_expression_list_opt RP
  154                   | postfix_expression PERIOD IDENTIFIER
  155                   | postfix_expression ARROW IDENTIFIER
  156                   | postfix_expression PLUSPLUS
  157                   | postfix_expression MINUSMINUS

  158 primary_expression: IDENTIFIER
  159                   | INTEGER_CONSTANT
  160                   | FLOAT_CONSTANT
  161                   | CHARACTER_CONSTANT
  162                   | STRING_LITERAL
  163                   | LP expression RP

  164 type_name: declaration_specifiers abstract_declarator_opt


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENTIFIER (258) 33 35 44 46 49 50 55 154 155 158
    TYPE_IDENTIFIER (259) 32
    FLOAT_CONSTANT (260) 160
    INTEGER_CONSTANT (261) 159
    CHARACTER_CONSTANT (262) 161
    STRING_LITERAL (263) 162
    PLUS (264) 133 148
    MINUS (265) 134 147
    PLUSPLUS (266) 142 156
    MINUSMINUS (267) 143 157
    AMP (268) 144
    BARBAR (269) 117
    AMPAMP (270) 119
    ARROW (271) 155
    SEMICOLON (272) 12 40 90 91 96 98 101 102 103
    LSS (273) 127
    GTR (274) 128
    LEQ (275) 129
    GEQ (276) 130
    EQL (277) 124
    NEQ (278) 125
    DOTDOTDOT (279) 62
    LP (280) 56 58 72 75 76 92 93 94 95 96 97 140 150 153 163
    RP (281) 56 58 72 75 76 92 93 94 95 96 97 140 150 153 163
    LB (282) 57 73 74 152
    RB (283) 57 73 74 152
    LR (284) 27 33 34 44 45 89
    RR (285) 27 33 34 44 45 89
    PERIOD (286) 154
    COMMA (287) 23 29 42 48 62 64 107
    EXCL (288) 146
    STAR (289) 53 54 136 145
    SLASH (290) 137
    PERCENT (291) 138
    ASSIGN (292) 25 50 114
    COLON (293) 87 88
    AUTO_SYM (294) 17
    STATIC_SYM (295) 18
    TYPEDEF_SYM (296) 19
    STRUCT_SYM (297) 36
    ENUM_SYM (298) 44 45 46
    SIZEOF_SYM (299) 149 150
    UNION_SYM (300) 37
    IF_SYM (301) 92 93
    ELSE_SYM (302) 93
    WHILE_SYM (303) 95 96
    DO_SYM (304) 96
    FOR_SYM (305) 97
    CONTINUE_SYM (306) 102
    BREAK_SYM (307) 103
    RETURN_SYM (308) 101
    SWITCH_SYM (309) 94
    CASE_SYM (310) 87
    DEFAULT_SYM (311) 88


Nonterminals, with rules where they appear

    $accept (57)
        on left: 0
    program (58)
        on left: 1
        on right: 0
    translate_unit (59)
        on left: 2 3
        on right: 1 3
    external_declaration (60)
        on left: 4 5
        on right: 2 3
    function_definition (61)
        on left: 6 7
        on right: 4
    declaration_list_opt (62)
        on left: 8 9
        on right: 89
    declaration_list (63)
        on left: 10 11
        on right: 9 11
    declaration (64)
        on left: 12
        on right: 5 10 11
    declaration_specifiers (65)
        on left: 13 14 15 16
        on right: 6 12 15 16 65 66 164
    storage_class_specifier (66)
        on left: 17 18 19
        on right: 14 16
    init_declarator_list_opt (67)
        on left: 20 21
        on right: 12
    init_declarator_list (68)
        on left: 22 23
        on right: 21 23
    init_declarator (69)
        on left: 24 25
        on right: 22 23
    initializer (70)
        on left: 26 27
        on right: 25 28 29
    initializer_list (71)
        on left: 28 29
        on right: 27 29
    type_specifier (72)
        on left: 30 31 32
        on right: 13 15 40
    struct_type_specifier (73)
        on left: 33 34 35
        on right: 30
    struct_or_union (74)
        on left: 36 37
        on right: 33 34 35
    struct_declaration_list (75)
        on left: 38 39
        on right: 33 34 39
    struct_declaration (76)
        on left: 40
        on right: 38 39
    struct_declarator_list (77)
        on left: 41 42
        on right: 40 42
    struct_declarator (78)
        on left: 43
        on right: 41 42
    enum_type_specifier (79)
        on left: 44 45 46
        on right: 31
    enumerator_list (80)
        on left: 47 48
        on right: 44 45 48
    enumerator (81)
        on left: 49 50
        on right: 47 48
    declarator (82)
        on left: 51 52
        on right: 6 7 24 25 43 56 65
    pointer (83)
        on left: 53 54
        on right: 51 54 70 71
    direct_declarator (84)
        on left: 55 56 57 58
        on right: 51 52 57 58
    parameter_type_list_opt (85)
        on left: 59 60
        on right: 58 75 76
    parameter_type_list (86)
        on left: 61 62
        on right: 60
    parameter_list (87)
        on left: 63 64
        on right: 61 62 64
    parameter_declaration (88)
        on left: 65 66
        on right: 63 64
    abstract_declarator_opt (89)
        on left: 67 68
        on right: 66 164
    abstract_declarator (90)
        on left: 69 70 71
        on right: 68 72
    direct_abstract_declarator (91)
        on left: 72 73 74 75 76
        on right: 69 71 74 76
    statement_list_opt (92)
        on left: 77 78
        on right: 89
    statement_list (93)
        on left: 79 80
        on right: 78 80
    statement (94)
        on left: 81 82 83 84 85 86
        on right: 79 80 87 88 92 93 94 95 96 97
    labeled_statement (95)
        on left: 87 88
        on right: 81
    compound_statement (96)
        on left: 89
        on right: 6 7 82
    expression_statement (97)
        on left: 90 91
        on right: 83
    selection_statement (98)
        on left: 92 93 94
        on right: 84
    iteration_statement (99)
        on left: 95 96 97
        on right: 85
    for_expression (100)
        on left: 98
        on right: 97
    expression_opt (101)
        on left: 99 100
        on right: 98 101
    jump_statement (102)
        on left: 101 102 103
        on right: 86
    arg_expression_list_opt (103)
        on left: 104 105
        on right: 153
    arg_expression_list (104)
        on left: 106 107
        on right: 105 107
    constant_expression_opt (105)
        on left: 108 109
        on right: 57 73 74
    constant_expression (106)
        on left: 110
        on right: 26 87 109
    expression (107)
        on left: 111
        on right: 50 91 92 93 94 95 96 100 110 152 163
    comma_expression (108)
        on left: 112
        on right: 111
    assignment_expression (109)
        on left: 113 114
        on right: 106 107 112 114
    conditional_expression (110)
        on left: 115
        on right: 113
    logical_or_expression (111)
        on left: 116 117
        on right: 115 117
    logical_and_expression (112)
        on left: 118 119
        on right: 116 117 119
    bitwise_or_expression (113)
        on left: 120
        on right: 118 119
    bitwise_xor_expression (114)
        on left: 121
        on right: 120
    bitwise_and_expression (115)
        on left: 122
        on right: 121
    equality_expression (116)
        on left: 123 124 125
        on right: 122 124 125
    relational_expression (117)
        on left: 126 127 128 129 130
        on right: 123 124 125 127 128 129 130
    shift_expression (118)
        on left: 131
        on right: 126 127 128 129 130
    additive_expression (119)
        on left: 132 133 134
        on right: 131 133 134
    multiplicative_expression (120)
        on left: 135 136 137 138
        on right: 132 133 134 136 137 138
    cast_expression (121)
        on left: 139 140
        on right: 135 136 137 138 140 144 145 146 147 148
    unary_expression (122)
        on left: 141 142 143 144 145 146 147 148 149 150
        on right: 114 139 142 143 149
    postfix_expression (123)
        on left: 151 152 153 154 155 156 157
        on right: 141 152 153 154 155 156 157
    primary_expression (124)
        on left: 158 159 160 161 162 163
        on right: 151
    type_name (125)
        on left: 164
        on right: 140 150


State 0

    0 $accept: • program $end

    IDENTIFIER       shift, and go to state 1
    TYPE_IDENTIFIER  shift, and go to state 2
    LP               shift, and go to state 3
    STAR             shift, and go to state 4
    AUTO_SYM         shift, and go to state 5
    STATIC_SYM       shift, and go to state 6
    TYPEDEF_SYM      shift, and go to state 7
    STRUCT_SYM       shift, and go to state 8
    ENUM_SYM         shift, and go to state 9
    UNION_SYM        shift, and go to state 10

    program                  go to state 11
    translate_unit           go to state 12
    external_declaration     go to state 13
    function_definition      go to state 14
    declaration              go to state 15
    declaration_specifiers   go to state 16
    storage_class_specifier  go to state 17
    type_specifier           go to state 18
    struct_type_specifier    go to state 19
    struct_or_union          go to state 20
    enum_type_specifier      go to state 21
    declarator               go to state 22
    pointer                  go to state 23
    direct_declarator        go to state 24


State 1

   55 direct_declarator: IDENTIFIER •

    $default  reduce using rule 55 (direct_declarator)


State 2

   32 type_specifier: TYPE_IDENTIFIER •

    $default  reduce using rule 32 (type_specifier)


State 3

   56 direct_declarator: LP • declarator RP

    IDENTIFIER  shift, and go to state 1
    LP          shift, and go to state 3
    STAR        shift, and go to state 4

    declarator         go to state 25
    pointer            go to state 23
    direct_declarator  go to state 24


State 4

   53 pointer: STAR •
   54        | STAR • pointer

    STAR  shift, and go to state 4

    $default  reduce using rule 53 (pointer)

    pointer  go to state 26


State 5

   17 storage_class_specifier: AUTO_SYM •

    $default  reduce using rule 17 (storage_class_specifier)


State 6

   18 storage_class_specifier: STATIC_SYM •

    $default  reduce using rule 18 (storage_class_specifier)


State 7

   19 storage_class_specifier: TYPEDEF_SYM •

    $default  reduce using rule 19 (storage_class_specifier)


State 8

   36 struct_or_union: STRUCT_SYM •

    $default  reduce using rule 36 (struct_or_union)


State 9

   44 enum_type_specifier: ENUM_SYM • IDENTIFIER LR enumerator_list RR
   45                    | ENUM_SYM • LR enumerator_list RR
   46                    | ENUM_SYM • IDENTIFIER

    IDENTIFIER  shift, and go to state 27
    LR          shift, and go to state 28


State 10

   37 struct_or_union: UNION_SYM •

    $default  reduce using rule 37 (struct_or_union)


State 11

    0 $accept: program • $end

    $end  shift, and go to state 29


State 12

    1 program: translate_unit •
    3 translate_unit: translate_unit • external_declaration

    IDENTIFIER       shift, and go to state 1
    TYPE_IDENTIFIER  shift, and go to state 2
    LP               shift, and go to state 3
    STAR             shift, and go to state 4
    AUTO_SYM         shift, and go to state 5
    STATIC_SYM       shift, and go to state 6
    TYPEDEF_SYM      shift, and go to state 7
    STRUCT_SYM       shift, and go to state 8
    ENUM_SYM         shift, and go to state 9
    UNION_SYM        shift, and go to state 10
